ADD_EXECUTABLE(swarm swarm.cpp)
ADD_EXECUTABLE(history history.cpp)
ADD_EXECUTABLE(quality quality.cpp)

TARGET_INCLUDE_DIRECTORIES(swarm PRIVATE ../common)
TARGET_INCLUDE_DIRECTORIES(history PRIVATE ../common)
TARGET_INCLUDE_DIRECTORIES(quality PRIVATE ../common)

IF(ENABLE_CORE)
    TARGET_LINK_LIBRARIES(swarm dnn_opt_core)
    TARGET_LINK_LIBRARIES(history dnn_opt_core)
    TARGET_LINK_LIBRARIES(quality dnn_opt_core)
ENDIF(ENABLE_CORE)

IF(ENABLE_COPT)
    TARGET_LINK_LIBRARIES(swarm dnn_opt_copt)
    TARGET_LINK_LIBRARIES(history dnn_opt_copt)
    TARGET_LINK_LIBRARIES(quality dnn_opt_copt)
ENDIF(ENABLE_COPT)

IF(ENABLE_CUDA)
  TARGET_LINK_LIBRARIES(swarm dnn_opt_cuda)
  TARGET_LINK_LIBRARIES(history dnn_opt_cuda)
  TARGET_LINK_LIBRARIES(quality dnn_opt_cuda)
ENDIF(ENABLE_CUDA)

SET_TARGET_PROPERTIES(swarm PROPERTIES CXX_STANDARD 11 CXXSTANDARD_REQUIRED YES)
SET_TARGET_PROPERTIES(history PROPERTIES CXX_STANDARD 11 CXXSTANDARD_REQUIRED YES)
SET_TARGET_PROPERTIES(quality PROPERTIES CXX_STANDARD 11 CXXSTANDARD_REQUIRED YES)

SET_TARGET_PROPERTIES(swarm PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(history PROPERTIES LINKER_LANGUAGE CXX)
SET_TARGET_PROPERTIES(quality PROPERTIES LINKER_LANGUAGE CXX)

